solved click event overlap problem

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,7 +60,7 @@ li {
 /* For Placeholder Fade */
 
 [placeholder]:focus::-webkit-input-placeholder {
-  transition: text-indent 1.5s 2s ease;
+  transition: text-indent 0.5s 0.5s ease;
   text-indent: -100%;
   opacity: 1;
 }
